# api

./: .env.example  .gitignore  Dockerfile  README.md  Restfox_2024-11-29.json  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: python-app.yml
api/: config.py  database.py  exceptions.py  main.py  models.py
api/address/: models.py  schemas.py
api/auth/: constant.py  dependencies.py  exceptions.py  models.py  permissions.py  router.py  schemas.py  service.py  utils.py
api/catalogue/: exceptions.py  models.py  router.py  schemas.py  service.py
api/core/: cache.py  constant.py  crud.py  email.py  models.py  router.py  schemas.py  service.py
api/export/: constant.py  exceptions.py  models.py  router.py  schemas.py  service.py
api/order/: constant.py  exceptions.py  models.py  router.py  schemas.py  service.py
api/review/: constant.py  exceptions.py  models.py  router.py  schemas.py  service.py
api/scripts/: create_superuser.py
api/services/: crud.py  exporter.py  filehandler.py
api/ticket/: constant.py  exceptions.py  models.py  router.py  schemas.py  service.py
api/user/: exceptions.py  models.py  router.py  schemas.py  service.py
api/voucher/: constant.py  exceptions.py  models.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 2024_11_21_1730-440f19dbb710_.py  (+4 more)
tests/: conftest.py  test_auth.py  test_category.py  test_company.py  test_core.py  test_order.py  test_product.py  test_project.py  test_review.py  test_sub_category.py  test_ticket.py  test_user.py  test_voucher.py
(+10 files in other folders)
